# task-manager-cli

./: .gitignore  CLAUDE.md  HumanShell诊断报告-2026-05-06.md  README.md  analysis_data.json  analyze_logseq.py  logseq_usage_audit.md  pyproject.toml  task-manager-cli-design.md
.claude/: settings.json
docs/: agent-interface.md  architecture.md  clarify.md  claude-code-usage.md  development.md  extraction-quality.md  human-shell-completion.md  human-shell-inline-edit.md  human-shell-mental-model.md  human-shell-real-graph-troubleshooting.md  human-shell-requirements-design.md  human-shell-terminal-workspace.md  human-shell.md  human-views.md  logseq-adapter.md  logseq-writeback.md  mini-projects.md  project-lifecycle.md  project-membership.md  project-restructure-migration.md  project-tree.md  proposals.md  provider-evaluation.md  providers.md  review-sessions.md  round-3-5-validation.md  semantic-markers.md  task-manager-cli-action-flow-system-design.md  task-manager-cli-design.md  task-manager-cli-macro-code-architecture.md  task-manager-cli-requirements-supplement-v0.2.md  testing.md  write-interface.md
tests/: test_agent_context.py  test_agent_project_node_raw.py  test_annotations.py  test_clarify.py  test_clarify_modes.py  test_extraction_quality_regression.py  test_human_shell.py  test_human_shell_context_find.py  test_human_shell_inline_edit.py  test_human_shell_inline_edit_conflict.py  test_human_shell_layout_views.py  test_human_shell_layout_workspace.py  test_human_shell_light_refresh.py  test_human_shell_mental_model_regression.py  test_human_shell_v15.py  (+30 more)
(+67 files in other folders)
